--- a/knowledge-base-web/src/app/features/home/home.component.html
+++ b/knowledge-base-web/src/app/features/home/home.component.html
@@ -45,7 +45,7 @@
             <div class="category">
               <h1>{{category.title}}</h1>
               <p *ngIf="category.subtitle">{{category.subtitle}}</p>
-              <a [routerLink]="handleLink('category', category.id, category.slug, category.title)">Ver todos os artigos e seções</a>
+              <a [routerLink]="handleLink('category', category.id, category.slug, category.title)">Ver</a>
             </div>
           </div>
 
