--- a/knowledge-base-web/src/app/features/category/category.component.css
+++ b/knowledge-base-web/src/app/features/category/category.component.css
@@ -9,6 +9,9 @@ header {
   box-shadow: 0px 3px 3px rgb(17, 100, 121);
   font-size: 30px;
   font-family: "Roboto";
+}
+
+header a{
   color: #ffffff;
 }
 
@@ -33,6 +36,10 @@ section{
   position: relative;
 }
 
+section h2{
+  font-size: 20px;
+}
+
 section + section{
   margin-top: 10px;
 }
@@ -55,3 +62,15 @@ section span a{
   bottom: 10px;
 }
 
+mat-icon.up{
+  position: fixed;
+  bottom: 30px;
+  left: 50px;
+  color: #0000ff;
+  font-size: 50px;
+}
+
+mat-paginator{
+  margin: 20px;
+  padding: 10px;
+}
