--- a/knowledge-base-web/src/styles.css
+++ b/knowledge-base-web/src/styles.css
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
-@import "~bootstrap/dist/css/bootstrap.min.css";
 
 * {
   border: none;
@@ -26,7 +25,7 @@ body {
 
 a,
 a:hover {
-  text-decoration: none;
+  text-decoration: none!important;
   color: #ffffff;
 }
 
