--- a/knowledge-base-web/src/app/shared/components/loading/loading.component.css
+++ b/knowledge-base-web/src/app/shared/components/loading/loading.component.css
@@ -1,54 +1,83 @@
-
-.loader-container{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.loader-container {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, .4);
 }
 
-.loader{
-    width: 100px;
-    height: 100px;
-    position: relative;
+.loader {
+  width: 100px;
+  height: 100px;
+  position: relative;
 }
 
-span{
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    background-color:#4aacd3;
-    border-radius: 4px;
-    animation: chase 1s linear infinite;
+span {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: #4aacd3;
+  border-radius: 4px;
+  animation: chase 1s linear infinite;
 }
 
-span:nth-child(2)
-{
-    animation-delay: 0.7s;
+span:nth-child(2) {
+  animation-delay: 0.7s;
 }
 
-span:nth-child(1)
-{
-    animation-delay: 1.4s;
+span:nth-child(1) {
+  animation-delay: 1.4s;
 }
 
-@keyframes chase
-{
-    0% {top: 0; left: 0;}
+@keyframes chase {
+  0% {
+    top: 0;
+    left: 0;
+  }
 
-    12.5% { top: 0; left: 50%;}
+  12.5% {
+    top: 0;
+    left: 50%;
+  }
 
-    25% { top: 0; left: 50%;}
+  25% {
+    top: 0;
+    left: 50%;
+  }
 
-    37.5% { top: 50%; left: 50%;}
+  37.5% {
+    top: 50%;
+    left: 50%;
+  }
 
-    50% { top: 50%; left: 50%;}
+  50% {
+    top: 50%;
+    left: 50%;
+  }
 
-    62.5% { top: 50% ; left: 0;}
+  62.5% {
+    top: 50%;
+    left: 0;
+  }
 
-    75% { top: 50% ; left: 0;}
+  75% {
+    top: 50%;
+    left: 0;
+  }
 
-    82.5% { top: 0; left: 0;}
+  82.5% {
+    top: 0;
+    left: 0;
+  }
 
-    100% { top: 0; left: 0;}
+  100% {
+    top: 0;
+    left: 0;
+  }
 }
