--- a/knowledge-base-web/src/app/features/home/home.component.html
+++ b/knowledge-base-web/src/app/features/home/home.component.html
@@ -54,7 +54,8 @@
         </mat-paginator>
 
         <kb-loading [showLoading]="loading"></kb-loading>
-        <kb-toast [show]="error" type='error' message="Ops ... An error occurred"></kb-toast>
+        
+        <kb-toast [show]="error" type='error' message="Ops ...  Um erro ocorreu, tente novamente mais tarde!"></kb-toast>
       </main>
     </div>
 
