--- a/knowledge-base-web/src/app/features/article/article.component.html
+++ b/knowledge-base-web/src/app/features/article/article.component.html
@@ -3,42 +3,21 @@
 <div class="container">
   <main>
     <article>
-      <h1>Boas Práticas</h1>
-      <h3>Algumas convenções para ajudar nas boas práticas de programação</h3>
+      <h1>{{article.title}}</h1>
+      <h3>{{article.subtitle}}</h3>
 
       <div class="article-information">
-        <span class="name-box">
-          JV
-        </span>
-
+        <div class="name-box">
+          <span>{{handleName(article.createdBy)}}</span>
+        </div>
         <span>
-          Escrito por: Joao Victor<br>
-          Atualizado: 6 dias atrás
+          Escrito por: {{article.createdBy}}<br>
+          Atualizado em: <time [dateTime]="article.updatedAt">{{article.updatedAt | date:'dd/MM/yyyy'}}</time>
         </span>
       </div>
 
       <p>
-        Indentação : Indentar o código facilita a compreensão. Eslint e Prettier como exemplos de ferramentas para
-        automatizar.
-
-        Variáveis : As variáveis ​​devem ser designadas de maneira intuitiva, com nomes pequenos e de fácil
-        entendimento. Quando uma variável tiver uma função de representar uma coleção de objetos, tais como array,
-        lista ou conjunto, deixe o seu nome no plural (ex: nomes, valores). Para nomes de variáveis com palavras
-        compostas, apenas a primeira letra da segunda palavra deve estar em maiúsculo. Exemplos: nome, urlExistente
-        e usuarios.
-
-        Constantes: O nome das constantes sempre deve ser declarado em letras maiúsculas, separadas por underscores
-        “_” no caso de existirem múltiplas palavras. Exemplo: public static final String PROFESSOR =
-        "role_professor";
-
-        Funções: Nomear funções de maneira intuitiva, não se importe com o tamanho do nome.
-
-        Comentar o código : Comentar o código ajuda no entendimento do objetivo de um método ou função.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, ratione iste suscipit inventore eos ipsam aliquid
-        ullam numquam impedit optio molestiae aliquam, alias nobis neque. Iste alias temporibus iusto placeat?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam alias vitae eveniet odit doloribus nobis
-        quasi impedit nesciunt, debitis voluptas blanditiis dolorem iste error obcaecati. Unde eligendi quisquam nihil
-        ipsa?
+        {{article.content}}
       </p>
 
       <hr>
@@ -56,6 +35,5 @@
     </article>
   </main>
 </div>
-<footer>
-  Todos os direitos reservados Joao Victor &#169; 2021
-</footer>
+<kb-footer [author]="article.createdBy"></kb-footer>
+
