--- a/knowledge-base-web/src/app/features/home/home.component.html
+++ b/knowledge-base-web/src/app/features/home/home.component.html
@@ -59,6 +59,4 @@
       </main>
     </div>
 
-    <footer>
-      Todos os direitos reservados Knowledge Base &#169; 2021
-    </footer>
+    <kb-footer author="Knowledge Base"></kb-footer>
