--- a/knowledge-base-web/src/app/shared/components/header/header.component.html
+++ b/knowledge-base-web/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <a [routerLink]="['/']">
+  <a [routerLink]="['/']" id="header-apper">
     <mat-icon>home</mat-icon> knowledge Base
   </a>
 </header>
