--- a/knowledge-base-web/src/app/features/manage/manage.component.html
+++ b/knowledge-base-web/src/app/features/manage/manage.component.html
@@ -1,1 +1,37 @@
-<p>manage works!</p>
+<div class="gridContainer">
+
+  <nav class="nav gridItem">
+
+    <div class="nav-content">
+      <h2>Gerenciamento de artigos</h2>
+    
+      <div class="options">
+        <div class="search-input">
+          <input type="text" placeholder="Buscar artigos...">
+          <mat-icon>search</mat-icon>
+        </div>
+
+        <div class="dropdown">
+          <button class="btn custom-dropdown dropdown-toggle" type="button" id="add" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Adicionar
+          </button>
+          <div class="dropdown-menu" aria-labelledby="add">
+            <button class="dropdown-item" type="button">Artigo</button>
+            <button class="dropdown-item" type="button">Seção</button>
+            <button class="dropdown-item" type="button">Categoria</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </nav>
+
+  <aside class="aside gridItem">
+    <h2>Categorias</h2>
+  </aside>
+
+  <main class="main gridItem">
+
+  </main>
+</div>
