--- a/knowledge-base-web/src/app/features/manage/manage.component.html
+++ b/knowledge-base-web/src/app/features/manage/manage.component.html
@@ -40,7 +40,7 @@
   <main class="main grid-item">
     <section class="main-content">
       <h2>
-        <mat-icon>folder_open</mat-icon> As boas práticas de programação
+        <mat-icon>folder_open</mat-icon> Boas práticas de programação
       </h2>
       <p>Descrição da categoria</p>
 
